<resources>
    <string name="app_name">Car Rental Service</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="category_format">Category: %1$s</string>
    <string name="car_info_placeholder">Car information will appear here</string>
    <string name="user_information">User Information</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="rental_duration">Rental Duration</string>
    <string name="rent_1_day">Rent for 1 Day</string>
    <string name="rent_1_week">Rent for 1 Week</string>
    <string name="rent_1_month">Rent for 1 Month</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="rent_selected_car">Rent Selected Car</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="trusted_rental_service">Your Trusted Car Rental Service</string>
    <string name="full_name_hint">Full Name</string>
    <string name="rental_summary">Rental Summary</string>
    <string name="confirm_rental">Confirm Rental</string>
    <string name="car_image">Car Image</string>
    <string name="menu_sedans">Normal Sedans</string>
    <string name="menu_suvs">SUVs</string>
    <string name="menu_sports">Sports Cars</string>
    <string name="success_icon">Success Icon</string>
    <string name="booking_confirmed">Booking Confirmed!</string>
    <string name="summary_details_placeholder">Summary details&#8230;</string>
    <string name="back_to_home">Back to Home</string>
    <string name="login_logo_description">Login Logo</string>
    <string name="car_details_format">%1$s\nEngine: %2$s | Power: %3$s\nDrivetrain: %4$s | Seats: %5$d\nDaily: $%6$d | Weekly: $%7$d | Monthly: $%8$d\n\n%9$s</string>
    <string name="my_account">My Account</string>
    <string name="account_btn">Account</string>
    <string name="profile_info">Profile Information</string>
    <string name="rental_history">Rental History</string>
    <string name="no_rentals_yet">You haven\'t rented any cars yet.</string>
    <string name="change_photo">Change Photo</string>
    <string name="phone_label">Phone:</string>
    <string name="email_label">Email:</string>
    <string name="payment_method_label">Preferred Payment:</string>
    <string name="select_category_hint">Select Car Category</string>
    <string name="select_specific_car_hint">Select Specific Car</string>
    <string name="car_name_placeholder">Car Name</string>
    <string name="selected_package_format">Selected Package: %1$s - $%2$d</string>
    <string name="select_rental_dates">Select Rental Dates</string>
    <string name="choose_start_date">Choose Start Date</string>
    <string name="no_date_selected">No date selected</string>
    <string name="custom_end_date_hint">Rent for more than a month? Pick End Date</string>
    <string name="confirm_and_rent">Confirm and Rent</string>
    <string name="profile_picture_desc">Profile Picture</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
    <string name="active_booking_format">Active Booking:\nCar: %1$s\nDates: %2$s to %3$s\nDuration: %4$s\nPrice: $%5$d\nStatus: Confirmed</string>
    <string name="latest_booking_format">Latest Booking: #%1$d\nVehicle: %2$s (%3$s)\nDates: %4$s to %5$s\nDuration: %6$s\nCost: $%7$d\nStatus: Confirmed</string>
    <string name="summary_confirmation_format">Booking Confirmation\nReference ID: #%1$d\n\nCustomer: %2$s (%3$s)\nVehicle: %4$s\nCar Code: %5$s\n\nRental Plan: %6$s\nPayment Type: %7$s\nTotal Amount: $%8$d\n\nStatus: Active / Confirmed</string>
    <string name="custom_duration_format">Custom Duration: %1$s - $%2$d</string>
</resources>